Fix alignment of text

--- a/web_static/styles/6-filters.css
+++ b/web_static/styles/6-filters.css
@@ -89,13 +89,13 @@
 
 /* Style for h3 headings */
 h3 {
-	font-weight: 600;
 	margin: 0;
-	padding: 17px 30px 0 30px;
+	text-align: left;
+	margin-top: 15px;
+	margin-bottom: 5px;
 }
 h4 {
 	margin-top: 0;
 	font-weight: 400;
 	font-size: 14px;
-	padding-left: 30px;
 }
